Fix add to cart function
Only customer can add to cart

--- a/Cosmetic-ecommerce-website-main/Cosmetic/Views/Home/ProductDetail.cshtml
+++ b/Cosmetic-ecommerce-website-main/Cosmetic/Views/Home/ProductDetail.cshtml
@@ -65,7 +65,7 @@
                                 Add To Cart
                             </button>
                         </div>
-                    </div>
+                    </div>x
                 </form>
                 <div class="d-flex align-items-center flex-wrap">
                     <a class="text-body-emphasis bg-body bg-dark-hover text-light-hover rounded-circle square product-action shadow-sm compare"
